--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "node-client",
   "version": "1.0.0",
   "description": "",
-  "main": "scripts/index.js",
+  "main": "src/scripts/index.js",
   "scripts": {
     "js": "node_modules/.bin/rollup -c --watch",
     "css": "node_modules/.bin/gulp",
-    "reload": "node_modules/.bin/reload -d public/ -b",
+    "reload": "node_modules/.bin/reload -b",
     "start": "node_modules/.bin/npm-run-all --parallel js css reload",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
