--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.2",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-postcss": "^6.3.0",
     "gulp-rename": "^1.2.2",
     "jquery": "^3.1.1",
